@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20191220
+# Version: 20200912
 
 # Generic auto-generated build files
 *~
@@ -61,6 +61,7 @@ stamp-h[1-9]
 /m4/gettext.m4
 /m4/glibc21.m4
 /m4/glibc2.m4
+/m4/host-cpu-c-abi.m4
 /m4/iconv.m4
 /m4/intdiv0.m4
 /m4/intldir.m4
