@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libfsapfs],
- [20200802],
+ [20201006],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
