@@ -155,18 +155,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfdata\libfdata_btree.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdata\libfdata_btree_node.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdata\libfdata_btree_range.c"
-				>
-			</File>
-			<File
 				RelativePath="..\..\libfdata\libfdata_cache.c"
 				>
 			</File>
@@ -230,18 +218,6 @@
 			>
 			<File
 				RelativePath="..\..\libfdata\libfdata_area.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdata\libfdata_btree.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdata\libfdata_btree_node.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdata\libfdata_btree_range.h"
 				>
 			</File>
 			<File
